fix uts and update log4j.