@@ -127,12 +127,19 @@
                 <configuration>
                     <forkCount>1</forkCount>
                     <reuseForks>false</reuseForks>
-                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                    <argLine>-Xmx4096m</argLine>
+                    <parallelOptimized>false</parallelOptimized>
+                    <shutdown>kill</shutdown>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.scalatest</groupId>
                 <artifactId>scalatest-maven-plugin</artifactId>
+                <configuration>
+                    <parallel>false</parallel>
+                    <forkMode>once</forkMode>
+                    <argLine>-Xmx2048m</argLine>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.xolstice.maven.plugins</groupId>
